<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText android:id="@+id/edit_policy"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:gravity="top"
        android:hint="@string/edit_attr"
    />
	 <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="saveAttr"
            android:text="@string/button_OR" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="button_next"
            android:text="@string/button_AND" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="saveAttr"
            android:text="@string/button_save" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="encrypt"
            android:text="@string/button_enc"/>
    </LinearLayout>
   	
    <TextView 
        android:id="@+id/status_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:text="@string/hello_world"/>
    

</LinearLayout>