<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:onClick="saveMsg"
            android:text="@string/button_save" />
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:onClick="nextActivity"
            android:text="@string/button_load" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:onClick="nextActivity"
            android:text="@string/button_next" />
    </LinearLayout>
    
    <EditText
        android:id="@+id/edit_message"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:gravity="top"
        android:hint="@string/edit_message" />

</LinearLayout>